# cmake_test

./: CMakeLists.txt  README.md
cmake/: install.cmake  toolchain.cmake
cmake/modules/: FindGSTREAM.cmake
include/: version_a.h  version_so.h
lib/: CMakeLists.txt
lib/lib_so/: CMakeLists.txt
lib/lib_so/src/: version_so.cpp
lib/liba/: CMakeLists.txt
lib/liba/src/: version_a.cpp
src/: main.cpp
